--- a/src/components/BreedFilter/BreedFilter.module.scss
+++ b/src/components/BreedFilter/BreedFilter.module.scss
@@ -1,10 +1,13 @@
 .wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
   width: 500px;
   .popup {
     width: 100%;
     position: absolute;
-
+    top: 120%;
     display: grid;
     height: 0px;
     overflow: hidden;
@@ -12,6 +15,7 @@
     border-radius: 0.5rem;
     box-shadow: 1px 1px 6px 0px rgba(255, 255, 255, 0.5);
     transition: height 0.5s ease-in-out;
+    z-index: 2;
     ul {
       overflow-y: scroll;
       padding: 0;
@@ -61,7 +65,10 @@
 
   .top {
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     gap: 0.5rem;
+
     button {
       border-radius: 1rem;
       display: flex;
