--- a/src/components/Dogs/Dogs.module.scss
+++ b/src/components/Dogs/Dogs.module.scss
@@ -1,26 +1,46 @@
 .dogs {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   place-content: center;
   grid-gap: 1rem;
+}
+.dogCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1a1a1a;
+  border-radius: 1rem;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+  .addToFav {
+    position: absolute;
+    top: 8px;
+    right: 8px;
 
-  .dogCard {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    .dogPhoto {
-      width: 200px;
-      height: 200px;
+    justify-content: center;
+    padding: 0.5rem;
+    cursor: pointer;
+    background-color: #1a1a1a;
+    border-radius: 50%;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
+    &:hover {
     }
+  }
+  .dogPhoto {
+    width: 100%;
+    height: 180px;
 
-    h3 {
-      margin: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+  }
+
+  h3 {
+    margin: 0;
   }
 }
