--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  box-sizing: border-box;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: rgb(145, 96, 7);
+}
+* {
+  /* border: 1px solid red; */
 }
 
 body {
@@ -28,7 +32,9 @@ body {
   /* display: flex;
   place-items: center; */
   min-width: 320px;
+
   min-height: 100vh;
+  box-sizing: border-box;
 }
 
 h1 {
