--- a/src/components/Dogs/Dogs.module.scss
+++ b/src/components/Dogs/Dogs.module.scss
@@ -4,6 +4,10 @@
   place-content: center;
   grid-gap: 1rem;
 }
+// .loader {
+//   position: absolute;
+//   z-index: 10;
+// }
 .dogCard {
   display: flex;
   flex-direction: column;
