--- a/src/components/ui/Dogs/Dogs.module.scss
+++ b/src/components/ui/Dogs/Dogs.module.scss
@@ -4,10 +4,11 @@
   place-content: center;
   grid-gap: 1rem;
 }
-// .loader {
-//   position: absolute;
-//   z-index: 10;
-// }
+.emptyRes {
+  display: block;
+  text-align: center;
+}
+
 .dogCard {
   display: flex;
   flex-direction: column;
